log
Wed, Mar 19, 2025  8:03:20 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  8:15:50 PM: 
 exercises.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
892a530
Wed, Mar 19, 2025  9:22:27 PM: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
84b4178
Wed, Mar 19, 2025  9:27:11 PM: 
 exercises.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
53a68fa
Thu, Mar 20, 2025  6:58:32 PM: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  0|0
df3ac78
Thu, Mar 20, 2025  7:06:56 PM: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c8c39e5
Thu, Mar 20, 2025  7:08:35 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:63:4: error: "/*" within comment [-Werror=comment]
    /*
     
exercises.c:67:1: error: "/*" within comment [-Werror=comment]
 /*
  
In file included from test.c:6:0:
arraylist.c: In function 'create_list':
arraylist.c:15:34: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
   List* L = (List*)malloc(sizeof(List));
                                  ^~~~
arraylist.c:16:4: error: dereferencing pointer to incomplete type 'List {aka struct List}'
   L->current = 0;
    ^~
test.c: In function 'crea_lista':
test.c:253:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
 }
 ^
test.c:271:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
In file included from test.c:6:0:
arraylist.c: In function 'first':
arraylist.c:27:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:253:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:37:6: error: 'info_msg' defined but not used [-Werror=unused-function]
 void info_msg(char* msg){
      ^~~~~~~~
In file included from test.c:6:0:
arraylist.c:102:5: error: 'get_size' defined but not used [-Werror=unused-function]
 int get_size(List *L) {
     ^~~~~~~~
arraylist.c:89:7: error: 'popCurrent' defined but not used [-Werror=unused-function]
 void* popCurrent(List *L) {
       ^~~~~~~~~~
arraylist.c:80:7: error: 'popBack' defined but not used [-Werror=unused-function]
 void* popBack(List *L) {
       ^~~~~~~
arraylist.c:68:7: error: 'popFront' defined but not used [-Werror=unused-function]
 void* popFront(List *L) {
       ^~~~~~~~
arraylist.c:55:6: error: 'pushCurrent' defined but not used [-Werror=unused-function]
 void pushCurrent(List *L, void *dato) {
      ^~~~~~~~~~~
arraylist.c:37:6: error: 'pushFront' defined but not used [-Werror=unused-function]
 void pushFront(List *L, void *dato) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9326ed8
